# Psuedoptimal

./: .gitignore  DOWNLOAD_INSTRUCTIONS.md  README.md  RUNPOD_CHECKLIST.md  RUNPOD_GUIDE.md  check_tokens.py  download_dataset.py  download_models.py  install_simple.sh  pyproject.toml  setup_offline.sh  setup_offline_robust.sh  test_trained_model.py  train_dsl.py
runpod/: run_training.sh  run_training_background.sh  setup.sh
src/: __init__.py  callbacks.py  models.py  prompts.py  rewards.py  sandbox.py
